2009-09-23  Robby Stephenson  <robby@periapsis.org>

	* Updated the SRU fetcher to leave the response format empty.

2009-09-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed crash when exporting to HTML under certain conditions.
	* Removed the GCcfilms exporter and added the GCstar exporter.

2009-09-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed typo in DTD.

2009-09-20  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.0.

2009-09-07  Robby Stephenson  <robby@periapsis.org>

	* Enabled multiple ISBN and LCCN search for SRU fetcher.

2009-09-06  Robby Stephenson  <robby@periapsis.org>

	* Updated the "Multiple ISBN" dialog box to validate ISBN and CueCat input.

2009-09-04  Robby Stephenson  <robby@periapsis.org>

	* Updated webcam support to use libv4l library.

2009-09-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.0pre2.

2009-08-23  Robby Stephenson  <robby@periapsis.org>

	* Added default fields for entry creation date and last-modified date.
	* Removed dependency on QCA2 library.

2009-08-09  Robby Stephenson  <robby@periapsis.org>

	* Updated Tellico user mailing list address.
	* Released Tellico 2.0pre1.

2009-08-01  Robby Stephenson  <robby@periapsis.org>

	* Updated HTML export to use country and language code both for sorting.
	* Updated Tellico home page URL.
	* Moved to document syntax 11 for removing Dependent and ReadOnly fields.
	* Added ID field to each new collection by default.

2009-03-13  Petri Damstén  <damu@iki.fi>

	* Added scanning support to image widget.
	* Added 'Open With...' -button to image widget

2009-03-10  Robby Stephenson  <robby@periapsis.org>

	* Added reading album artist from TPE2 tags in mp3 files.

2009-02-14  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 1.3.5.

2009-02-04  Robby Stephenson  <robby@periapsis.org>

	* Reverted change from 2007 that merged entries by combining all values in multiple-value fields.

2009-02-02  Robby Stephenson  <robby@periapsis.org>